[package]
name = "prime_bench"
authors = ["Grayson Hieb grayson.hieb@du.edu"]
description = "A prime finding benchmarking tool"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Lowband21/prime_bench"
repository = "https://github.com/Lowband21/prime_bench"
version = "0.1.1"
edition = "2021"
keywords = ["cli", "gui", "bench", "benchmark", "prime"]
categories = ["benchmarking-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.9.0"
iced_graphics = "0.8.0"
iced_native = "0.10.3"
iced_wgpu = "0.10.0"
num-bigint = {version = "0.4.3", features = ["rand"]}
num-traits = "0.2.15"
num_cpus = "1.15.0"
rand = "0.8.5"
rayon = "1.7.0"
requestty = "0.5.0"

